# connect_four

./: README.md  pyproject.toml
src/: board.py  game.py  main.py  player.py  settings.json  utils.py
