[project]
name = "connect-four"
version = "1.0.0"
description = "A simple terminal Connect Four game."
authors = [
    {name = "Steven Sullivan <spatrick0710@gmail.com>"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
